# rootimeit

./: .gitignore  CMakeLists.txt  generatetest.py  generatetest_array.py  generatetest_tclonesarray.py  generatetest_vararray.py  generatetest_vector.py  nbranch.py  realtest.C  test.C
src/: CMakeLists.txt  LinkDef.h  LoadArray.cxx  LoadArray.h  LoadBase.cxx  LoadBase.h  LoadTClonesArray.cxx  LoadTClonesArray.h  LoadVector.cxx  LoadVector.h  PlotStats.ipynb  Test.cxx  Test.h  main.cxx
